--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link href="/fontawesome/css/fontawesome.css" rel="stylesheet" />
+		<link href="/fontawesome/css/brands.css" rel="stylesheet" />
+		<link href="/fontawesome/css/solid.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
