--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,13 @@
 		<link href="/fontawesome/css/brands.css" rel="stylesheet" />
 		<link href="/fontawesome/css/solid.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- Cloudflare Web Analytics -->
+		<script
+			defer
+			src="https://static.cloudflareinsights.com/beacon.min.js"
+			data-cf-beacon='{"token": "8241e112ac91497aac7ee1516c05eb30"}'
+		></script>
+		<!-- End Cloudflare Web Analytics -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
