--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,18 @@
 			data-cf-beacon='{"token": "8241e112ac91497aac7ee1516c05eb30"}'
 		></script>
 		<!-- End Cloudflare Web Analytics -->
+		<!-- Start of Google Analytics-->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7BBW31456H"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-7BBW31456H');
+		</script>
+		<!-- End of Google Analytics-->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
